# CorpusAI

./: .gitignore  CLAUDE.md  CorpusAI_Tutorial.docx  DEPLOY.md  DEPLOYMENT.md  FEATURES.md  README.md  TUTORIAL.md  cloudbuild.yaml
backend/: .dockerignore  .env.example  Dockerfile  apprunner.yaml  fly.toml  pyproject.toml
backend/app/: main.py  mcp_server.py
backend/app/agents/: __init__.py  arc_writers.py  base.py  explore_discussion_writer.py  gap_finder.py  idea_generator.py  method_designer.py  nhmrc_writers.py  paper_summariser.py  reference_formatter.py  reviewers.py  section_writers.py  thesis_writers.py  topic_analyser.py
backend/app/api/: routes_arc.py  routes_nhmrc.py  routes_papers.py  routes_research.py  routes_thesis.py
backend/app/core/: cache.py  config.py  logging.py  problem.py  prompts.py  security.py  usage.py
backend/app/prompts/: abstract_writer.md  arc_aims_writer.md  arc_approach_writer.md  arc_benefit_writer.md  arc_innovation_writer.md  arc_opening_writer.md  arc_significance_writer.md  biology_reviewer.md  discussion_writer.md  explore_discussion_writer.md  gap_finder.md  gap_reviewer.md  idea_generator.md  introduction_writer.md  method_designer.md  methods_writer.md  nhmrc_aims_writer.md  nhmrc_burden_writer.md  nhmrc_consumer_writer.md  nhmrc_impact_writer.md  nhmrc_methods_writer.md  nhmrc_synopsis_writer.md  paper_summariser.md  reference_formatter.md  results_writer.md  review_synthesiser.md  statistics_reviewer.md  thesis_abstract_writer.md  thesis_chapter_writer.md  topic_analyser.md
backend/app/schemas/: arc.py  nhmrc.py  paper.py  papers.py  research.py  thesis.py
backend/app/services/: __init__.py  chunker.py  docx_export.py  figure_store.py  pdf_reader.py  reference_store.py  retrieval.py  semantic_scholar.py
backend/app/workflows/: arc.py  explore.py  nhmrc.py  thesis.py  write.py
backend/data/: corpusai.sqlite
backend/scripts/: generate_tutorial.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_arc_workflow.py  test_explore_workflow.py  test_nhmrc_workflow.py  test_phase2_agents.py  test_section_writers.py  test_thesis_workflow.py  test_topic_analyser.py  test_write_workflow.py
(+49 files in other folders)
